=== Transmission 1.76 (2009/mm/dd) ===
[http://trac.transmissionbt.com/query?milestone=1.76&group=component&groupdesc=1&order=severity All tickets closed by this release]
==== All Platforms ====
  * Fix possible data loss when trying to move torrents to where they already are
  * Fix minor protocol error that didn't send a port message to some peers
  * Fix manpage errors
==== Mac ====
  * When creating a torrent with multiple trackers, place each tracker into its own tier
  * Fix display glitch when changing sort to "Queue Order"
==== Daemon ====
  * Fix possible data loss when using "transmission-remote --find"
  * Fix ratio-limit bug on some uClibc systems
  * Fix invalid JSON "nan" error on optware
==== GTK+ ====
  * Fix crash in the Preferences dialog when testing to see if the port is open
  * Fix crash on exit when a torrent's Properties dialog is open
  * Fix broken SIGINT (ctrl-c) handling
  * Fix tray menu's main window status when Transmission is started minimized
  * Fix 1.61 build failure on systems with new versions of glib but older versions of gtk
==== Qt ====
  * Fix crash when removing expired torrents from the display
  * Fix client from closing, rather than closing to the system tray, when clicking X

=== Transmission 1.75 (2009/09/13) ===
[http://trac.transmissionbt.com/query?milestone=1.75&group=component&groupdesc=1&order=severity All tickets closed by this release]
==== All Platforms ====
  * Don't wait so long on unresponsive trackers if there are other trackers to try
  * Adding corrupt/invalid torrents could crash Transmission
  * Fix 1.74 bug that caused a high CPU load on startup
  * Fix 1.74 bug that stopped multitracker if a single tracker sent an error message
  * Fix bug in converting other charsets to UTF-8
  * Handle HTTP redirects more gracefully
  * Faster verification of local data for torrents with small piece size
  * Fix 1.74 build error when compiling without DHT
==== Mac ====